# TeleAntiFraud-2.0

./: .env.example  .gitignore  GITHUB_UPLOAD.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
configs/: pipeline.api.example.yaml  pipeline.demo.yaml
docs/: data_release_policy.md  paper_pipeline_commands.md  pipeline_overview.md  release_checklist.md
examples/: mini_scenarios.jsonl
scripts/: build_snapshot.py  run_baseline_eval.py  run_generation.py  run_generation_api.py  run_higgs_tts.py  run_text_eval.py
src/teleantifraud2_pipeline/: __init__.py  evaluation.py  generation.py  io.py  llm_generation.py  metrics.py  quality.py  schemas.py  snapshot.py  tts_higgs.py
