[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleantifraud2-pipeline"
version = "0.1.0"
description = "Reproducible generation, Higgs V3 speech synthesis, snapshot, and evaluation pipeline for TeleAntiFraud 2.0."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Research use only"}
authors = [{name = "TeleAntiFraud 2.0 Authors"}]
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
]

[project.optional-dependencies]
asr = ["torch", "transformers", "librosa"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
